# mediaplayer

./: AudioControl.qml  CMakeLists.txt  MetadataInfo.qml  PlaybackControl.qml  PlaybackRateControl.qml  PlaybackSeekControl.qml  PlayerMenuBar.qml  README.md  TracksInfo.qml  main.cpp  main.qml
